--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                     </div>
                     <ul class="features__list features-list">
                         <li class="features-list__item features-list__item--active">
-                            <a class="features-list__btn " href="#">Simple Bookmarking</a>
+                            <a class="features-list__btn " href="#sliders-one">Simple Bookmarking</a>
                         </li>
                         <li class="features-list__item">
-                            <a class="features-list__btn" href="#">Speedy Searching</a>
+                            <a class="features-list__btn" href="#sliders-tuo">Speedy Searching</a>
                         </li>
                         <li class="features-list__item">
-                            <a class="features-list__btn" href="#">Easy Sharing</a>
+                            <a class="features-list__btn" href="#sliders-three">Easy Sharing</a>
                         </li>
                     </ul>
                     <div class="sliders sliders-active sliders-one" id="sliders-one">
@@ -307,5 +307,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 </html>
